manifests/00-meta-db-virtuoso.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: meta-db-virtuoso
  namespace: default
  labels:
    app: meta-db-virtuoso
spec:
  serviceName: ${VIRTUOSO_SERVICE_NAME}
  replicas: 1
  selector:
    matchLabels:
      app: meta-db-virtuoso
  template:
    metadata:
      labels:
        app: meta-db-virtuoso
    spec:
      containers:
        - name: virtuoso
          image: openlink/virtuoso-opensource-7@sha256:e07868a3db9090400332eaa8ee694b8cf9bf7eebc26db6bbdc3bb92fd30ed010
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1111
              protocol: TCP
              name: isql
            - containerPort: 8890
              protocol: TCP
              name: sparql
          resources:
            requests:
              cpu: ${VIRTUOSO_CPU_REQUEST}
              memory: ${VIRTUOSO_MEMORY_REQUEST}
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - '-c'
                  - virtuoso-t +wait +shutdown
          volumeMounts:
            - mountPath: /database
              name: virtuoso-storage
              subPath: ${VIRTUOSO_DB_SUBPATH}
      volumes:
        - name: virtuoso-storage
          persistentVolumeClaim:
            claimName: ${STORAGE_PVC}
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: ${VIRTUOSO_SERVICE_NAME}
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 1111
      targetPort: 1111
      protocol: TCP
      name: isql
    - port: 8890
      targetPort: 8890
      protocol: TCP
      name: sparql
  selector:
    app: meta-db-virtuoso
