manifests/04-oc-oldwebsite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-oldwebsite
  namespace: default
  labels:
    app: oc-oldwebsite
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oc-oldwebsite
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oc-oldwebsite
    spec:
      containers:
        - name: oc-oldwebsite
          image: bolobynight/oc-website:${OC_WEBSITE_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: oc-oldwebsite-service
  namespace: default
spec:
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: oc-oldwebsite
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oc-oldwebsite-http
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`oc-old.opencitations.net`)
      kind: Rule
      services:
        - name: varnish
          port: 80
      # tls:
      #   certResolver: myresolver
