manifests/06-oc-splitted-sparql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-sparql
  namespace: default
  labels:
    app: oc-sparql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oc-sparql
  template:
    metadata:
      labels:
        app: oc-sparql
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: oc-sparql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: oc-sparql
          image: opencitations/oc_sparql:${SPARQL_WEBSITE_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "8Gi"
            requests:
              memory: 2Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
 name: oc-sparql-service
 namespace: default
 labels:
   app: oc-sparql
spec:
 selector:
   app: oc-sparql
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8080
 type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-sparql
 namespace: default
 labels:
   app: oc-sparql
spec:
 entryPoints:
   - websecure
 routes:
   - kind: Rule
     match: Host(`${SPARQL_BASE_URL}`)
     services:
       - name: varnish-service
         port: 80
 tls:
   certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-sparql-http-only
 namespace: default
 labels:
   app: oc-sparql
spec:
 entryPoints:
   - web
 routes:
   - kind: Rule
     match: Host(`${SPARQL_BASE_URL}`)
     middlewares:
       - name: redirect-to-https
     services:
       - name: varnish-service
         port: 80
