manifests/12-oc-splitted-oci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-oci
  namespace: default
  labels:
    app: oc-oci
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oc-oci
  template:
    metadata:
      labels:
        app: oc-oci
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: oc-oci
                topologyKey: kubernetes.io/hostname
      containers:
        - name: oc-oci
          image: opencitations/oc_oci:${OCI_WEBSITE_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: "4Gi"
            requests:
              memory: 2Gi
              cpu: 250m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
 name: oc-oci-service
 namespace: default
 labels:
   app: oc-oci
spec:
 selector:
   app: oc-oci
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8080
 type: ClusterIP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-oci
 namespace: default
 labels:
   app: oc-oci
spec:
 entryPoints:
   - websecure
 routes:
   - kind: Rule
     match: Host(`${OCI_BASE_URL}`)
     services:
       - name: varnish-service
         port: 80
 tls:
   certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-oci-http-only
 namespace: default
 labels:
   app: oc-oci
spec:
 entryPoints:
   - web
 routes:
   - kind: Rule
     match: Host(`${OCI_BASE_URL}`)
     middlewares:
       - name: redirect-to-https
     services:
       - name: varnish-service
         port: 80
