manifests/13-oc-splitted-lode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-lode
  namespace: default
  labels:
    app: oc-lode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oc-lode
  template:
    metadata:
      labels:
        app: oc-lode
    spec:
      containers:
        - name: oc-lode
          image: opencitations/lode:${LODE_WEBSITE_VERSION}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 2
              memory: "8Gi"
            requests:
              memory: 2Gi
              cpu: 250m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
 name: oc-lode-service
 namespace: default
 labels:
   app: oc-lode
spec:
 selector:
   app: oc-lode
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 8080
 type: ClusterIP
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-lode
 namespace: default
 labels:
   app: oc-lode
spec:
 entryPoints:
   - websecure
 routes:
   - kind: Rule
     match: Host(`${LODE_BASE_URL}`)
     services:
       - name: varnish-service
         port: 80
 tls:
   certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
 name: oc-lode-http-only
 namespace: default
 labels:
   app: oc-lode
spec:
 entryPoints:
   - web
 routes:
   - kind: Rule
     match: Host(`${LODE_BASE_URL}`)
     middlewares:
       - name: redirect-to-https
     services:
       - name: varnish-service
         port: 80
